--- a/index.html
+++ b/index.html
@@ -1,36 +1,154 @@
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Foundation | Welcome</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/pi.css" />
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,900|Roboto+Slab:400,700|Roboto+Condensed:400,700&subset=latin,greek' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/foundation.css"/>
+    <link rel="stylesheet" href="css/pi.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,900|Roboto+Slab:400,700|Roboto+Condensed:400,700&subset=latin,greek'
+          rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="js/vendor/modernizr.js"></script>
-  </head>
-  <body>
+</head>
+<body>
 
-    <div class="pi-band restlet-bg-dark">
-      <div class="row">
-        <div class="large-12 columns">
-          <h1>A Pi API</h1>
+<div class="pi-band restlet-bg-dark">
+    <div class="row">
+        <div class="large-8 columns">
+            <h1>
+                <span class="pi-bigger restlet-yellow">π</span>&nbsp; { A Pi API for π-day }
+            </h1>
         </div>
-      </div>
-    </div>
-
-    <div class="pi-band">
-      <div class="row">
-        <div class="large-12 columns">
-          hfreuihferz huiruez
+        <div class="large-4 columns">
+            <a href="https://restlet.com"><img src="img/restlet-white-large.png" align="right" width="290px"/></a>
         </div>
-      </div>
     </div>
+</div>
 
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
+<div class="pi-band restlet-bg-grey">
+    <div class="row">
+        <div class="large-3 columns center">
+            <h1 class="white">
+                <i class="fa fa-calendar"></i>
+                &nbsp;3/14&nbsp;
+            </h1>
+        </div>
+        <div class="large-9 columns">
+            <p>
+                On March 14th, we're celebrating <a href="http://www.piday.org/">π-day</a>!
+                Why March 14th? Well, if you write dates with month first and date second, you'll get 3/14,
+                the beginning of the digits of the irrational number!
+            </p>
+            <p>
+                At <a href="https://restlet.com">Restlet</a>, we're fans on APIs,
+                so we thought it owuld be fun to create an API for Pi,
+                to discover the digits of our favorite number.
+            </p>
+            <p>
+                Get a <strong>chance to win a brand new Raspberry Pi 3</strong> by using the π API!
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="pi-band">
+    <div class="row">
+        <div class="large-3 columns center">
+            <img src="https://upload.wikimedia.org/wikipedia/foundation/thumb/2/20/Wikipedia-logo-v2-en_SVG.svg/350px-Wikipedia-logo-v2-en_SVG.svg.png"
+                 width="200px;">
+        </div>
+
+        <div class="large-9 columns">
+            <p>
+                First of all, a big of background on π, straight from <a href="https://en.wikipedia.org/wiki/Pi">Wikipedia</a>:
+            </p>
+            <blockquote>
+                The number π is a mathematical constant, the ratio of a circle's circumference to its diameter,
+                commonly approximated as 3.14159. It has been represented by the Greek letter "π" since the mid-18th
+                century,
+                though it is also sometimes spelled out as "pi".
+            </blockquote>
+            <blockquote>
+                Being an irrational number, π cannot be expressed exactly as a fraction (equivalently,
+                its decimal representation never ends and never settles into a permanent repeating pattern).
+                Still, fractions such as 22/7 and other rational numbers are commonly used to approximate π.
+                The digits appear to be randomly distributed; however, to date, no proof of this has been discovered.
+                Also, π is a transcendental number – a number that is not the root of any non-zero polynomial
+                having rational coefficients. This transcendence of π implies that
+                it is impossible to solve the ancient challenge of squaring the circle with a compass and straightedge.
+            </blockquote>
+        </div>
+    </div>
+</div>
+
+<div class="pi-band restlet-bg-blue">
+    <div class="row">
+        <div class="large-12 columns">
+            <h2><i class="fa fa-gift"></i> &nbsp; Win the brand new Raspberry Pi 3!</h2>
+        </div>
+    </div>
+</div>
+
+<div class="pi-band">
+    <div class="row">
+        <div class="large-6 columns">
+            <p>
+                The <a href="https://www.raspberrypi.org/products/raspberry-pi-3-model-b/">Raspberry Pi 3</a> is the third generation Raspberry Pi.
+            </p>
+            <ul>
+                <li><strong>A 1.2GHz 64-bit quad-core ARMv8 CPU</strong></li>
+                <li><strong>802.11n Wireless LAN</strong></li>
+                <li><strong>Bluetooth 4.1</strong></li>
+                <li><strong>Bluetooth Low Energy (BLE)</strong></li>
+                <li>4 USB ports</li>
+                <li>40 GPIO pins</li>
+                <li>Full HDMI port</li>
+                <li>Ethernet port</li>
+                <li>Combined 3.5mm audio jack and composite video</li>
+                <li>Camera interface (CSI)</li>
+                <li>Display interface (DSI)</li>
+                <li>Micro SD card slot (now push-pull rather than push-push)</li>
+                <li>Core IV 3D graphics core</li>
+            </ul>
+        </div>
+        <div class="large-6 columns">
+            <a href="https://www.raspberrypi.org/products/raspberry-pi-3-model-b/">
+                <img src="img/raspberry-pi-3.jpg"/>
+            </a>
+        </div>
+    </div>
+</div>
+
+<div class="pi-band restlet-bg-orange">
+    <div class="row">
+        <div class="large-12 columns">
+            <h2><i class="fa fa-warning"></i> &nbsp; The challenge!</h2>
+        </div>
+    </div>
+</div>
+
+<div class="pi-band restlet-bg-yellow">
+    <div class="row">
+        <div class="large-12 columns">
+            <h2><i class="fa fa-code"></i> &nbsp; Use the π API</h2>
+        </div>
+    </div>
+</div>
+
+<div class="pi-band restlet-bg-green">
+    <div class="row">
+        <div class="large-12 columns">
+            <h2><i class="fa fa-question-circle"></i> &nbsp; Submit your answer!</h2>
+        </div>
+    </div>
+</div>
+
+
+<script src="js/vendor/jquery.js"></script>
+<script src="js/foundation.min.js"></script>
+<script>
+    $(document).foundation();
+</script>
+</body>
 </html>
