move root assets to an html folder

--- a/html/index.html
+++ b/html/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Foundation | Welcome</title>
-    <link rel="stylesheet" href="css/foundation.css"/>
-    <link rel="stylesheet" href="css/pi.css"/>
+    <link rel="stylesheet" href="../css/foundation.css"/>
+    <link rel="stylesheet" href="../css/pi.css"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,900|Roboto+Slab:400,700|Roboto+Condensed:400,700&subset=latin,greek'
           rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script src="js/vendor/modernizr.js"></script>
+    <script src="../js/vendor/modernizr.js"></script>
 </head>
 <body>
 
@@ -21,7 +21,7 @@
             </h1>
         </div>
         <div class="large-4 columns">
-            <a href="https://restlet.com"><img src="img/restlet-white-large.png" align="right" width="290px"/></a>
+            <a href="https://restlet.com"><img src="../img/restlet-white-large.png" align="right" width="290px"/></a>
         </div>
     </div>
 </div>
@@ -114,7 +114,7 @@
         </div>
         <div class="large-6 columns">
             <a href="https://www.raspberrypi.org/products/raspberry-pi-3-model-b/">
-                <img src="img/raspberry-pi-3.jpg"/>
+                <img src="../img/raspberry-pi-3.jpg"/>
             </a>
         </div>
     </div>
@@ -145,8 +145,8 @@
 </div>
 
 
-<script src="js/vendor/jquery.js"></script>
-<script src="js/foundation.min.js"></script>
+<script src="../js/vendor/jquery.js"></script>
+<script src="../js/foundation.min.js"></script>
 <script>
     $(document).foundation();
 </script>
