--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,7 @@
             </p>
             <p>
                 At <a href="https://restlet.com">Restlet</a>, we're fans on APIs,
-                so we thought it owuld be fun to create an API for Pi,
+                so we thought it would be fun to create an API for Pi,
                 to discover the digits of our favorite number.
             </p>
             <p>
@@ -58,7 +58,6 @@
             <img src="https://upload.wikimedia.org/wikipedia/foundation/thumb/2/20/Wikipedia-logo-v2-en_SVG.svg/350px-Wikipedia-logo-v2-en_SVG.svg.png"
                  width="200px;">
         </div>
-
         <div class="large-9 columns">
             <p>
                 First of all, a big of background on π, straight from <a href="https://en.wikipedia.org/wiki/Pi">Wikipedia</a>:
@@ -94,7 +93,8 @@
     <div class="row">
         <div class="large-6 columns">
             <p>
-                The <a href="https://www.raspberrypi.org/products/raspberry-pi-3-model-b/">Raspberry Pi 3</a> is the third generation Raspberry Pi.
+                The <a href="https://www.raspberrypi.org/products/raspberry-pi-3-model-b/">Raspberry Pi 3</a> is the
+                third generation Raspberry Pi.
             </p>
             <ul>
                 <li><strong>A 1.2GHz 64-bit quad-core ARMv8 CPU</strong></li>
@@ -127,6 +127,25 @@
         </div>
     </div>
 </div>
+<div class="pi-band">
+    <div class="row">
+        <div class="large-12 columns">
+            <p>
+                If you want to <strong>win a Raspberry Pi 3</strong>,
+                you'll have to <strong>use the API</strong> to hunt through the digits of Pi.
+            </p>
+            <p>
+                <strong>
+                    The goal is to find at which pages (a page contains a thousand digits of Pi, starting from 0)
+                    appears the sequence 66666666 (8 times the digit 6).
+                </strong>
+            </p>
+            <p>
+
+            </p>
+        </div>
+    </div>
+</div>
 
 <div class="pi-band restlet-bg-yellow">
     <div class="row">
@@ -135,11 +154,43 @@
         </div>
     </div>
 </div>
+<div class="pi-band">
+    <div class="row">
+        <div class="large-6 columns">
+
+        </div>
+        <div class="large-6 columns">
+
+        </div>
+    </div>
+</div>
 
 <div class="pi-band restlet-bg-green">
     <div class="row">
         <div class="large-12 columns">
             <h2><i class="fa fa-question-circle"></i> &nbsp; Submit your answer!</h2>
+        </div>
+    </div>
+</div>
+<div class="pi-band">
+    <div class="row">
+        <div class="large-12 columns">
+            abcd
+        </div>
+    </div>
+</div>
+
+<div class="pi-band restlet-bg-dark">
+    <div class="row">
+        <div class="large-12 columns">
+            <h2 class="white"><i class="fa fa-pie-chart"></i> &nbsp; Slices of π digits...</h2>
+        </div>
+    </div>
+</div>
+<div class="pi-band restlet-bg-grey">
+    <div class="row">
+        <div class="large-12 columns">
+            abcd
         </div>
     </div>
 </div>
