first draft of content ready

--- a/html/index.html
+++ b/html/index.html
@@ -132,6 +132,7 @@
         <div class="large-6 columns">
             If you want to <strong>win a Raspberry Pi 3</strong>,
             you'll have to <strong>use the API</strong> to hunt through the digits of Pi.
+            <p>&nbsp;</p>
         </div>
         <div class="large-6 columns white" style="border: 2px dotted white">
             The goal is to find at which pages (a page contains a thousand digits of Pi, starting from 0),
@@ -176,12 +177,13 @@
             </p>
         </div>
         <div class="large-6 columns">
-            <h3>For your information:</h3>
+            <h3>For your information</h3>
             <p>
                 This API has a billion digits of π in store!
                 That means you'll be able to go through a million pages of digits,
                 from page 0, upto page 999999!
-                We collected the first billion digits from this <a href="http://www.mit.edu/afs.new/sipb/contrib/pi/">MIT website</a>.
+                We collected the first billion digits from this <a href="http://www.mit.edu/afs.new/sipb/contrib/pi/">MIT
+                website</a>.
             </p>
             <p>
                 The API has been designed and deployed on the Restlet
@@ -205,11 +207,23 @@
             <h2><i class="fa fa-question-circle"></i> &nbsp; Submit your answer!</h2>
         </div>
     </div>
-</div>
-<div class="pi-band">
     <div class="row">
         <div class="large-12 columns">
-            abcd
+            <p>
+                To submit your answer, to get a chance to win the Raspberry Pi 3,
+                you'll have to <a href="https://apispark.restlet.com/" class="white">create an account on the APISpark</a> platform,
+                and fill this <a href="http://goo.gl/forms/56XR36dFKP" class="white">Google Form</a>
+                with the following information:
+            </p>
+            <ul>
+                <li>Your <strong>name</strong></li>
+                <li>Your <strong>email address</strong></li>
+                <li>Your <strong>APISpark user name</strong> (Go to APISpark, then My account > Tokens > User name)</li>
+                <li>And... the <strong>numbers of the pages</strong> where you find the magic π digits!</li>
+            </ul>
+            <p>
+                <a href="http://goo.gl/forms/56XR36dFKP" class="button restlet-bg-dark" >Submit your answer</a>
+            </p>
         </div>
     </div>
 </div>
