links to the API overview page

--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,8 @@
             </p>
             <p>
                 At <a href="https://restlet.com">Restlet</a>, we're fans on APIs,
-                so we thought it would be fun to create an API for Pi,
+                so we thought it would be fun to create
+                <a href="https://apispark.restlet.com/apis/17498/versions/1/overview">an API for Pi</a>,
                 to discover the digits of our favorite number.
             </p>
             <p>
@@ -154,7 +155,8 @@
         <div class="large-6 columns">
             <h3>Calling the API</h3>
             <p>
-                The π API is pretty straightforward to call.
+                The <a href="https://apispark.restlet.com/apis/17498/versions/1/overview">π API</a>
+                is pretty straightforward to call.
                 You just have to issue a GET request on: <br>
                 <code>https://apidigits.apispark.net/v1/digits/{page}</code><br>
                 where <code>{page}</code> is the number of the page of a thousand digits you want to look at.
@@ -179,14 +181,16 @@
         <div class="large-6 columns">
             <h3>For your information</h3>
             <p>
-                This API has a billion digits of π in store!
+                This <a href="https://apispark.restlet.com/apis/17498/versions/1/overview">API</a>
+                has a billion digits of π in store!
                 That means you'll be able to go through a million pages of digits,
                 from page 0, upto page 999999!
                 We collected the first billion digits from this <a href="http://www.mit.edu/afs.new/sipb/contrib/pi/">MIT
                 website</a>.
             </p>
             <p>
-                The API has been designed and deployed on the Restlet
+                The <a href="https://apispark.restlet.com/apis/17498/versions/1/overview">API</a>
+                has been designed and deployed on the Restlet
                 <a href="https://restlet.com/products/apispark/">APISpark</a> API platform.
             </p>
             <p>
