--- a/html/index.html
+++ b/html/index.html
@@ -248,155 +248,28 @@
         </div>
     </div>
     <div class="row">
-        <div class="large-12 columns huge-digit">
-            1415926535 <br>
-            8979323846 <br>
-            2643383279 <br>
-            5028841971 <br>
-            6939937510 <br>
-            5820974944 <br>
-            5923078164 <br>
-            0628620899 <br>
-            8628034825 <br>
-            3421170679 <br>
-            8214808651 <br>
-            3282306647 <br>
-            0938446095 <br>
-            5058223172 <br>
-            5359408128 <br>
-            4811174502 <br>
-            8410270193 <br>
-            8521105559 <br>
-            6446229489 <br>
-            5493038196 <br>
-            4428810975 <br>
-            6659334461 <br>
-            2847564823 <br>
-            3786783165 <br>
-            2712019091 <br>
-            4564856692 <br>
-            3460348610 <br>
-            4543266482 <br>
-            1339360726 <br>
-            0249141273 <br>
-            7245870066 <br>
-            0631558817 <br>
-            4881520920 <br>
-            9628292540 <br>
-            9171536436 <br>
-            7892590360 <br>
-            0113305305 <br>
-            4882046652 <br>
-            1384146951 <br>
-            9415116094 <br>
-            3305727036 <br>
-            5759591953 <br>
-            0921861173 <br>
-            8193261179 <br>
-            3105118548 <br>
-            0744623799 <br>
-            6274956735 <br>
-            1885752724 <br>
-            8912279381 <br>
-            8301194912 <br>
-            9833673362 <br>
-            4406566430 <br>
-            8602139494 <br>
-            6395224737 <br>
-            1907021798 <br>
-            6094370277 <br>
-            0539217176 <br>
-            2931767523 <br>
-            8467481846 <br>
-            7669405132 <br>
-            0005681271 <br>
-            4526356082 <br>
-            7785771342 <br>
-            7577896091 <br>
-            7363717872 <br>
-            1468440901 <br>
-            2249534301 <br>
-            4654958537 <br>
-            1050792279 <br>
-            6892589235 <br>
-            4201995611 <br>
-            2129021960 <br>
-            8640344181 <br>
-            5981362977 <br>
-            4771309960 <br>
-            5187072113 <br>
-            4999999837 <br>
-            2978049951 <br>
-            0597317328 <br>
-            1609631859 <br>
-            5024459455 <br>
-            3469083026 <br>
-            4252230825 <br>
-            3344685035 <br>
-            2619311881 <br>
-            7101000313 <br>
-            7838752886 <br>
-            5875332083 <br>
-            8142061717 <br>
-            7669147303 <br>
-            5982534904 <br>
-            2875546873 <br>
-            1159562863 <br>
-            8823537875 <br>
-            9375195778 <br>
-            1857780532 <br>
-            1712268066 <br>
-            1300192787 <br>
-            6611195909 <br>
-            2164201989 <br>
-            3809525720 <br>
-            1065485863 <br>
-            2788659361 <br>
-            5338182796 <br>
-            8230301952 <br>
-            0353018529 <br>
-            6899577362 <br>
-            2599413891 <br>
-            2497217752 <br>
-            8347913151 <br>
-            5574857242 <br>
-            4541506959 <br>
-            5082953311 <br>
-            6861727855 <br>
-            8890750983 <br>
-            8175463746 <br>
-            4939319255 <br>
-            0604009277 <br>
-            0167113900 <br>
-            9848824012 <br>
-            8583616035 <br>
-            6370766010 <br>
-            4710181942 <br>
-            9555961989 <br>
-            4676783744 <br>
-            9448255379 <br>
-            7747268471 <br>
-            0404753464 <br>
-            6208046684 <br>
-            2590694912 <br>
-            9331367702 <br>
-            8989152104 <br>
-            7521620569 <br>
-            6602405803 <br>
-            8150193511 <br>
-            2533824300 <br>
-            3558764024 <br>
-            7496473263 <br>
-            9141992726 <br>
-            0426992279 <br>
-            6782354781 <br>
-            6360093417 <br>
-            2164121992 <br>
-            4586315030 <br>
-            2861829745 <br>
-            5570674983 <br>
-            8505494588 <br>
-            586926995
+        <div class="large-12 columns" id="all-digits">
+            <p class="huge-digit">1415926535</p>
+            <p class="huge-digit">8979323846</p>
+            <p class="huge-digit">2643383279</p>
+            <p class="huge-digit">5028841971</p>
+            <p class="huge-digit">6939937510</p>
+            <p class="huge-digit">5820974944</p>
+            <p class="huge-digit">5923078164</p>
+            <p class="huge-digit">0628620899</p>
+            <p class="huge-digit">8628034825</p>
+            <p class="huge-digit">3421170679</p>
+            <p class="huge-digit">8214808651</p>
+            <p class="huge-digit">3282306647</p>
+            <p class="huge-digit">0938446095</p>
+            <p class="huge-digit">5058223172</p>
+            <p class="huge-digit">5359408128</p>
+            <p class="huge-digit">4811174502</p>
+            <p class="huge-digit">8410270193</p>
+            <p class="huge-digit">8521105559</p>
+            <p class="huge-digit">6446229489</p>
+            <p class="huge-digit">5493038196</p>
+            <p class="huge-digit">4428810975</p>
         </div>
     </div>
 </div>
@@ -404,15 +277,8 @@
 
 <script src="../js/vendor/jquery.js"></script>
 <script src="../js/foundation.min.js"></script>
-<script src="../js/jquery.jscroll.min.js"></script>
 <script>
     $(document).foundation();
-    $('.infinite-scroll').jscroll({
-        loadingHtml: 'Slicing the π...',
-        padding: 20,
-        nextSelector: 'a.jscroll-next:last',
-        contentSelector: 'li'
-    });
 </script>
 </body>
 </html>
