--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Foundation | Welcome</title>
+    <title>The Pi API by Restlet</title>
     <link rel="stylesheet" href="../css/foundation.css"/>
     <link rel="stylesheet" href="../css/pi.css"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,900|Roboto+Slab:400,700|Roboto+Condensed:400,700&subset=latin,greek'
