better highlight for the challenge

--- a/html/index.html
+++ b/html/index.html
@@ -135,7 +135,7 @@
             you'll have to <strong>use the API</strong> to hunt through the digits of Pi.
             <p>&nbsp;</p>
         </div>
-        <div class="large-6 columns white" style="border: 2px dotted white">
+        <div class="large-6 columns white bordered">
             The goal is to find at which pages (a page contains a thousand digits of Pi, starting from 0),
             among the first billion digits of π,
             appears the sequence 66666666 (8 times the digit 6).
