--- a/html/index.html
+++ b/html/index.html
@@ -249,29 +249,6 @@
     </div>
     <div class="row">
         <div class="large-12 columns" id="all-digits">
-            <!--
-            <p class="huge-digit">1415926535</p>
-            <p class="huge-digit">8979323846</p>
-            <p class="huge-digit">2643383279</p>
-            <p class="huge-digit">5028841971</p>
-            <p class="huge-digit">6939937510</p>
-            <p class="huge-digit">5820974944</p>
-            <p class="huge-digit">5923078164</p>
-            <p class="huge-digit">0628620899</p>
-            <p class="huge-digit">8628034825</p>
-            <p class="huge-digit">3421170679</p>
-            <p class="huge-digit">8214808651</p>
-            <p class="huge-digit">3282306647</p>
-            <p class="huge-digit">0938446095</p>
-            <p class="huge-digit">5058223172</p>
-            <p class="huge-digit">5359408128</p>
-            <p class="huge-digit">4811174502</p>
-            <p class="huge-digit">8410270193</p>
-            <p class="huge-digit">8521105559</p>
-            <p class="huge-digit">6446229489</p>
-            <p class="huge-digit">5493038196</p>
-            <p class="huge-digit">4428810975</p>
-            -->
         </div>
     </div>
 </div>
@@ -287,7 +264,7 @@
             $.ajax({
                 url: "https://apidigits.apispark.net/v1/digits/" + pages,
                 success: function(data) {
-//                    $("#all-digits").append(data.content);
+                    if (pages > 0) $("#all-digits").append('<p class="digit-page-marker">Page #' + pages + '</p>');
                     pages++;
                     var digitsContent = data.content;
                     for (var i = 0; i < 100; i++) {
