--- a/html/index.html
+++ b/html/index.html
@@ -215,20 +215,22 @@
         <div class="large-6 columns">
             <p>
                 To submit your answer, to get a chance to win the Raspberry Pi 3,
-                you'll have to <a href="https://apispark.restlet.com/" class="white">create an account on the APISpark</a> platform,
+                you'll have to <a href="https://apispark.restlet.com/" class="white">create an account on the
+                APISpark</a> platform,
                 and fill this <a href="http://goo.gl/forms/56XR36dFKP" class="white">Google Form</a>
                 with the following information:
             </p>
             <ul>
                 <li>Your <strong>name</strong></li>
                 <li>Your <strong>email address</strong></li>
-                <li>Your <strong>APISpark user name</strong> <br> (Go to APISpark, then My account > Tokens > User name)</li>
+                <li>Your <strong>APISpark user name</strong> <br> (Go to APISpark, then My account > Tokens > User name)
+                </li>
                 <li>And... the <strong>numbers of the pages</strong> <br> where you find the magic π digits!</li>
             </ul>
         </div>
         <div class="large-6 columns center">
             <p>
-                <a href="http://goo.gl/forms/56XR36dFKP" class="button restlet-bg-dark" >Submit your answer</a>
+                <a href="http://goo.gl/forms/56XR36dFKP" class="button restlet-bg-dark">Submit your answer</a>
             </p>
         </div>
     </div>
@@ -257,13 +259,14 @@
 <script src="../js/vendor/jquery.js"></script>
 <script src="../js/foundation.min.js"></script>
 <script>
-    var pages = 0;
     $(document).foundation();
-    $(window).scroll(function(){
-        if  ($(window).scrollTop() == $(document).height() - $(window).height()) {
+
+    var pages = 0;
+    $(window).scroll(function () {
+        if ($(window).scrollTop() == $(document).height() - $(window).height()) {
             $.ajax({
                 url: "https://apidigits.apispark.net/v1/digits/" + pages,
-                success: function(data) {
+                success: function (data) {
                     if (pages > 0) $("#all-digits").append('<p class="digit-page-marker">Page #' + pages + '</p>');
                     pages++;
                     var digitsContent = data.content;
@@ -274,6 +277,21 @@
             });
         }
     });
+
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-32616835-2', 'auto');
+    ga('send', 'pageview');
 </script>
 </body>
 </html>
