source of the marketing campaign

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,9 @@
             </h1>
         </div>
         <div class="large-4 columns">
-            <a href="https://restlet.com"><img src="../img/restlet-white-large.png" align="right" width="290px"/></a>
+            <a href="https://restlet.com?utm_source=page&utm_medium=link&utm_campaign=pi_day">
+                <img src="../img/restlet-white-large.png" align="right" width="290px"/>
+            </a>
         </div>
     </div>
 </div>
@@ -41,9 +43,9 @@
                 the beginning of the digits of the irrational number!
             </p>
             <p>
-                At <a href="https://restlet.com">Restlet</a>, we're fans on APIs,
+                At <a href="https://restlet.com?utm_source=page&utm_medium=link&utm_campaign=pi_day">Restlet</a>, we're fans on APIs,
                 so we thought it would be fun to create
-                <a href="https://apispark.restlet.com/apis/17498/versions/1/overview">an API for Pi</a>,
+                <a href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">an API for Pi</a>,
                 to discover the digits of our favorite number.
             </p>
             <p>
@@ -155,7 +157,7 @@
         <div class="large-6 columns">
             <h3>Calling the API</h3>
             <p>
-                The <a href="https://apispark.restlet.com/apis/17498/versions/1/overview">π API</a>
+                The <a href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">π API</a>
                 is pretty straightforward to call.
                 You just have to issue a GET request on: <br>
                 <code>https://apidigits.apispark.net/v1/digits/{page}</code><br>
@@ -169,11 +171,11 @@
                 you will get from the 1000th to 1999th digits after the dot.
             </p>
             <p>
-                You can use <a href="https://restlet.com/products/dhc/">DHC by Restlet</a>
+                You can use <a href="https://restlet.com/products/dhc/?utm_source=page&utm_medium=link&utm_campaign=pi_day">DHC by Restlet</a>
                 to invoke the API, to go through the digits.
             </p>
             <p>
-                <a href="https://restlet.com/products/dhc/">
+                <a href="https://restlet.com/products/dhc/?utm_source=page&utm_medium=link&utm_campaign=pi_day">
                     <img src="https://restlet.com/static/app/img/nav-dhc.jpg" alt="DHC by Restlet">
                 </a>
             </p>
@@ -181,7 +183,7 @@
         <div class="large-6 columns">
             <h3>For your information</h3>
             <p>
-                This <a href="https://apispark.restlet.com/apis/17498/versions/1/overview">API</a>
+                This <a href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">API</a>
                 has a billion digits of π in store!
                 That means you'll be able to go through a million pages of digits,
                 from page 0, upto page 999999!
@@ -189,12 +191,12 @@
                 website</a>.
             </p>
             <p>
-                The <a href="https://apispark.restlet.com/apis/17498/versions/1/overview">API</a>
+                The <a href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">API</a>
                 has been designed and deployed on the Restlet
-                <a href="https://restlet.com/products/apispark/">APISpark</a> API platform.
+                <a href="https://restlet.com/products/apispark/?utm_source=page&utm_medium=link&utm_campaign=pi_day">APISpark</a> API platform.
             </p>
             <p>
-                <a href="https://restlet.com/products/apispark/">
+                <a href="https://restlet.com/products/apispark/?utm_source=page&utm_medium=link&utm_campaign=pi_day">
                     <img src="https://restlet.com/static/app/img/nav-apispark.jpg" alt="Restlet APISpark API platform">
                 </a>
             </p>
@@ -215,7 +217,7 @@
         <div class="large-6 columns">
             <p>
                 To submit your answer, to get a chance to win the Raspberry Pi 3,
-                you'll have to <a href="https://apispark.restlet.com/" class="white">create an account on the
+                you'll have to <a href="https://apispark.restlet.com/?utm_source=page&utm_medium=link&utm_campaign=pi_day" class="white">create an account on the
                 APISpark</a> platform,
                 and fill this <a href="http://goo.gl/forms/56XR36dFKP" class="white">Google Form</a>
                 with the following information:
