remove the apispark account info

--- a/html/index.html
+++ b/html/index.html
@@ -217,17 +217,17 @@
         <div class="large-6 columns">
             <p>
                 To submit your answer, to get a chance to win the Raspberry Pi 3,
-                you'll have to <a href="https://apispark.restlet.com/?utm_source=page&utm_medium=link&utm_campaign=pi_day" class="white">create an account on the
-                APISpark</a> platform,
+                you'll have to
+                <a href="https://www.restlet.com/?utm_source=page&utm_medium=link&utm_campaign=pi_day" class="white">
+                    create an account on the Restlet
+                </a> platform, by clicking the "Sign in" button in the top right hand corner,
                 and fill this <a href="http://goo.gl/forms/56XR36dFKP" class="white">Google Form</a>
                 with the following information:
             </p>
             <ul>
                 <li>Your <strong>name</strong></li>
-                <li>Your <strong>email address</strong></li>
-                <li>Your <strong>APISpark user name</strong> <br> (Go to APISpark, then My account > Tokens > User name)
-                </li>
-                <li>And... the <strong>numbers of the pages</strong> <br> where you find the magic π digits!</li>
+                <li>Your <strong>email address</strong> <br> (the one used for signing up on the platform)</li>
+                <li>And... the <strong>numbers of the pages</strong> <br> where you found the magic π digits!</li>
             </ul>
         </div>
         <div class="large-6 columns center">
