--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="dhc-aware-page" data-console-debug="true" data-indicator-element-id="dhcIndicator"/>
     <title>The Pi API by Restlet</title>
     <link rel="stylesheet" href="../css/foundation.css"/>
     <link rel="stylesheet" href="../css/pi.css"/>
@@ -10,6 +11,49 @@
           rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="../js/vendor/modernizr.js"></script>
+    <script type="text/javascript">
+        window.addEventListener("load", function (e) {
+            var dhcTag = document.getElementById("dhcIndicator");
+            if (dhcTag) {
+                var dhcInfo = JSON.parse(dhcTag.textContent);
+                console.log("DHC is installed!", dhcInfo);
+                var btn = document.getElementById("tryOut");
+                btn.style.display = "";
+                btn.addEventListener("click", function () {
+                    window.postMessage({
+                        target: dhcInfo.extensionId,
+                        type: "openRequest",
+                        payloadType: "dhc",
+                        payload: {
+                            description: "Load digits of Pi",
+                            headers: [
+                                {
+                                    name: "Accept",
+                                    value: "application/json",
+                                    enabled: true
+                                }
+                            ],
+                            method: {
+                                "link": "",
+                                "name": "GET"
+                            },
+                            name: "Loads the first page of digits of Pi",
+                            uri: {
+                                "path": "apidigits.apispark.net/v1/digits/0",
+                                "scheme": {
+                                    "name": "https",
+                                    "version": "V11"
+                                }
+                            }
+                        }
+                    }, document.origin);
+                });
+            } else {
+                console.log("DHC is not installed");
+                document.getElementById("installDhc").style.display = "";
+            }
+        });
+    </script>
 </head>
 <body>
 
@@ -43,9 +87,11 @@
                 the beginning of the digits of the irrational number!
             </p>
             <p>
-                At <a href="https://restlet.com?utm_source=page&utm_medium=link&utm_campaign=pi_day">Restlet</a>, we're fans on APIs,
+                At <a href="https://restlet.com?utm_source=page&utm_medium=link&utm_campaign=pi_day">Restlet</a>, we're
+                fans on APIs,
                 so we thought it would be fun to create
-                <a href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">an API for Pi</a>,
+                <a href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">an
+                    API for Pi</a>,
                 to discover the digits of our favorite number.
             </p>
             <p>
@@ -154,11 +200,13 @@
 </div>
 <div class="pi-band">
     <div class="row">
-        <div class="large-6 columns">
+        <div class="large-8 columns">
             <h3>Calling the API</h3>
             <p>
-                The <a href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">π API</a>
-                is pretty straightforward to call.
+                The <a
+                    href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">π
+                API</a>
+                is pretty straightforward to call. <br>
                 You just have to issue a GET request on: <br>
                 <code>https://apidigits.apispark.net/v1/digits/{page}</code><br>
                 where <code>{page}</code> is the number of the page of a thousand digits you want to look at.
@@ -166,24 +214,31 @@
             <p>
                 So if you call this URL: <br>
                 <code>https://apidigits.apispark.net/v1/digits/0</code><br>
-                it will return the first thousand digits after 3. And when calling<br>
+                it will return the first thousand digits after 3. And when calling:<br>
                 <code>https://apidigits.apispark.net/v1/digits/1</code><br>
                 you will get from the 1000th to 1999th digits after the dot.
             </p>
             <p>
-                You can use <a href="https://restlet.com/products/dhc/?utm_source=page&utm_medium=link&utm_campaign=pi_day">DHC by Restlet</a>
+                You can use <a
+                    href="https://restlet.com/products/dhc/?utm_source=page&utm_medium=link&utm_campaign=pi_day">DHC by
+                Restlet</a>
                 to invoke the API, to go through the digits.
             </p>
-            <p>
-                <a href="https://restlet.com/products/dhc/?utm_source=page&utm_medium=link&utm_campaign=pi_day">
-                    <img src="https://restlet.com/static/app/img/nav-dhc.jpg" alt="DHC by Restlet">
+            <p class="center">
+                <a id="tryOut" style="display:none" class="button white restlet-bg-dark">
+                    Open in <img src="../img/dhc-logo-white.png" alt="Open DHC to call the Pi API" width="150px">
+                </a>
+                <a id="installDhc" style="display:none" class="button white restlet-bg-dark"
+                   href="https://chrome.google.com/webstore/detail/aejoelaoggembcahagimdiliamlcdmfm">
+                    To try the API, install <img src="../img/dhc-logo-white.png" alt="Install DHC to call the API" width="150px">
                 </a>
             </p>
         </div>
-        <div class="large-6 columns">
+        <div class="large-4 columns">
             <h3>For your information</h3>
             <p>
-                This <a href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">API</a>
+                This <a
+                    href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">API</a>
                 has a billion digits of π in store!
                 That means you'll be able to go through a million pages of digits,
                 from page 0, upto page 999999!
@@ -191,17 +246,19 @@
                 website</a>.
             </p>
             <p>
-                The <a href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">API</a>
+                The <a
+                    href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">API</a>
                 has been designed and deployed on the Restlet
-                <a href="https://restlet.com/products/apispark/?utm_source=page&utm_medium=link&utm_campaign=pi_day">APISpark</a> API platform.
-            </p>
-            <p>
-                <a href="https://restlet.com/products/apispark/?utm_source=page&utm_medium=link&utm_campaign=pi_day">
-                    <img src="https://restlet.com/static/app/img/nav-apispark.jpg" alt="Restlet APISpark API platform">
-                </a>
+                <a href="https://restlet.com/products/apispark/?utm_source=page&utm_medium=link&utm_campaign=pi_day">APISpark</a>
+                API platform.
             </p>
             <p>
                 Ready? Let's the hunt begin!
+            </p>
+            <p class="center">
+                <a href="https://restlet.com/products/apispark/?utm_source=page&utm_medium=link&utm_campaign=pi_day">
+                    <img src="https://restlet.com/static/app/img/nav-apispark.jpg" alt="Restlet APISpark API platform">
+                </a>
             </p>
         </div>
     </div>
@@ -232,7 +289,10 @@
         </div>
         <div class="large-6 columns center">
             <p>
-                <a href="http://goo.gl/forms/56XR36dFKP" class="button restlet-bg-dark">Submit your answer</a>
+                <a href="http://goo.gl/forms/56XR36dFKP" class="button restlet-bg-dark">
+                    <i class="fa fa-send"></i> &nbsp;
+                    Submit your answer
+                </a>
             </p>
         </div>
     </div>
@@ -280,10 +340,17 @@
         }
     });
 
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-257558-11', 'auto');
     ga('send', 'pageview');
