More links and tweaks to digits size

--- a/html/index.html
+++ b/html/index.html
@@ -93,6 +93,10 @@
                 <a href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">an
                     API for Pi</a>,
                 to discover the digits of our favorite number.
+                The API was created with the
+                <a href="https://restlet.com/products/apispark/?utm_source=page&utm_medium=link&utm_campaign=pi_day">APISpark</a>
+                platform, and you can easily try the API out with
+                <a href="https://restlet.com/products/dhc/?utm_source=page&utm_medium=link&utm_campaign=pi_day">DHC by Restlet</a>.
             </p>
             <p>
                 Get a <strong>chance to win a brand new Raspberry Pi 3</strong> by using the π API!
