clarify the wording

--- a/html/index.html
+++ b/html/index.html
@@ -188,9 +188,9 @@
             <p>&nbsp;</p>
         </div>
         <div class="large-6 columns white bordered">
-            The goal is to find at which pages (a page contains a thousand digits of Pi, starting from 0),
+            The goal is to find all the pages (a page contains a thousand digits of Pi, starting from 0),
             among the first billion digits of π,
-            appears the sequence 66666666 (8 times the digit 6).
+            where the sequence 66666666 appears (8 times the digit 6).
         </div>
     </div>
 </div>
@@ -277,7 +277,8 @@
     <div class="row">
         <div class="large-6 columns">
             <p>
-                To submit your answer, to get a chance to win the Raspberry Pi 3,
+                You have <strong>till Sunday, March 20th</strong>, to enter the contest!
+                To submit your answer, to get <strong>a chance to win the Raspberry Pi 3</strong>,
                 you'll have to
                 <a href="https://www.restlet.com/?utm_source=page&utm_medium=link&utm_campaign=pi_day" class="white">
                     create an account on the Restlet
