--- a/html/index.html
+++ b/html/index.html
@@ -88,7 +88,7 @@
             </p>
             <p>
                 At <a href="https://restlet.com?utm_source=page&utm_medium=link&utm_campaign=pi_day">Restlet</a>, we're
-                fans on APIs,
+                fans of APIs,
                 so we thought it would be fun to create
                 <a href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">an
                     API for Pi</a>,
