update the challenge to simplify it

--- a/html/index.html
+++ b/html/index.html
@@ -96,7 +96,8 @@
                 The API was created with the
                 <a href="https://restlet.com/products/apispark/?utm_source=page&utm_medium=link&utm_campaign=pi_day">APISpark</a>
                 platform, and you can easily try the API out with
-                <a href="https://restlet.com/products/dhc/?utm_source=page&utm_medium=link&utm_campaign=pi_day">DHC by Restlet</a>.
+                <a href="https://restlet.com/products/dhc/?utm_source=page&utm_medium=link&utm_campaign=pi_day">DHC by
+                    Restlet</a>.
             </p>
             <p>
                 Get a <strong>chance to win a brand new Raspberry Pi 3</strong> by using the π API!
@@ -188,9 +189,14 @@
             <p>&nbsp;</p>
         </div>
         <div class="large-6 columns white bordered">
-            The goal is to find all the pages (a page contains a thousand digits of Pi, starting from 0),
-            among the first billion digits of π,
-            where the sequence 66666666 appears (8 times the digit 6).
+            <p>
+                The goal is to find all the pages (a page contains a thousand digits of Pi, starting from 0),
+                among the first million digits of π,
+                where the sequence 12345 appears.
+            </p>
+            <p>
+                So where does 12345 appear in the first 1000 thousand pages of π digits?
+            </p>
         </div>
     </div>
 </div>
@@ -234,7 +240,8 @@
                 </a>
                 <a id="installDhc" style="display:none" class="button white restlet-bg-dark"
                    href="https://chrome.google.com/webstore/detail/aejoelaoggembcahagimdiliamlcdmfm">
-                    To try the API, install <img src="../img/dhc-logo-white.png" alt="Install DHC to call the API" width="150px">
+                    To try the API, install <img src="../img/dhc-logo-white.png" alt="Install DHC to call the API"
+                                                 width="150px">
                 </a>
             </p>
         </div>
@@ -244,10 +251,12 @@
                 This <a
                     href="https://apispark.restlet.com/apis/17498/versions/1/overview?utm_source=page&utm_medium=link&utm_campaign=pi_day">API</a>
                 has a billion digits of π in store!
-                That means you'll be able to go through a million pages of digits,
-                from page 0, upto page 999999!
                 We collected the first billion digits from this <a href="http://www.mit.edu/afs.new/sipb/contrib/pi/">MIT
                 website</a>.
+            </p>
+            <p>
+                But for our challenge, you don't need to go through all those digits!
+                Fortunately, you'll only have to search though the first million digits (ie. from page 0 to page 999).
             </p>
             <p>
                 The <a
